# nomad_django

./: README.md  pyproject.toml
config/: settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py
tweets/templates/: all_tweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
