[tool.poetry]
name = "nomad-django"
version = "0.1.0"
description = ""
authors = ["ggomdong <ggomdong@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
